getPropertyValue for url path doesn't return the "#" character https://bugs.webkit.org/show_bug.cgi?id=215409

Patch by Rob Buis <rbuis@igalia.com> on 2021-05-03
Reviewed by Youenn Fablet.

Address post review comments.

* css/SVGCSSComputedStyleDeclaration.cpp:
(WebCore::ComputedStyleExtractor::svgPropertyValue):

Canonical link: https://commits.webkit.org/237240@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276894 268f45cc-cd09-0410-ab3c-d52691b4dbfc